core/src/test/resources/configurations/invalid/instanceof-very-imbricated-extra-char.instances
instanceof wrapper {
	instanceof vm {
		name: my-vm;
		instanceof server { failed comment
			name: server1;
		}
	}
}
